--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> EJS -  <%= tituloWeb %></title>
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css"> <!--por el static toma la carpeta public-->
+    <link rel="stylesheet" href="/css/bootstrap.min.css"> <!--por el static toma la carpeta public-->
 </head>
 <body>
 
