--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include("template/cabecera", {tituloWeb: 'Pagina de Inicio'}) %>
     
-    <h1 class="text-primary">  Este es el index </h1>
+    <h1 class="text-primary">  Rodri cagón </h1>
     <h2> Prueba <%= titulo %> </h2>
 <%- include("template/footer") %>
